revisions spelling errors and checkpoint

--- a/metroid/Flint_Data_Set_Test-checkpoint.ipynb
+++ b/metroid/Flint_Data_Set_Test-checkpoint.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8560ce71",
+   "id": "c72e41fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f5fe2199",
+   "id": "0976adda",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53899242",
+   "id": "bc0f871c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e59f0688",
+   "id": "fdb5d980",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2d4a47db",
+   "id": "30fa8125",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "72428e0a",
+   "id": "eba5d3b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ee781768",
+   "id": "f5926c0c",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1e25797e",
+   "id": "4ea33a3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d85d7599",
+   "id": "652b0c10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "323f492d",
+   "id": "5fb0bfc5",
    "metadata": {},
    "outputs": [
     {
@@ -663,21 +663,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653eed1c",
+   "id": "3ae6d7c5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7604868f",
+   "id": "702601fb",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b728e712",
+   "id": "57be2997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "04809280",
+   "id": "8f206a5f",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "6d61b4a2",
+   "id": "e388776c",
    "metadata": {},
    "source": [
     "The median divides the income distribution into two equal parts: one-half of the cases falling below the median income and one-half above the median. For households and families, the median income is based on the distribution of the total number of households and families including those with no income."
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "2ff72dae",
+   "id": "4a0f2cbd",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "d113a722",
+   "id": "2cc88414",
    "metadata": {},
    "source": [
     "Per capita income is a measure of the amount of money earned per person in a nation or geographic region. Per capita income can be used to determine the average per-person income for an area and to evaluate the standard of living and quality of life of the population. Per capita income for a nation is calculated by dividing the country's national income by its population."
@@ -798,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "74da3075",
+   "id": "44242aa4",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
     "        autopct=\"%1.1f%%\", shadow=True, startangle=140)\n",
     "\n",
     "#Labels which can be changed\n",
-    "plt.title(\"Household Demographices for Flint, Michigan\", fontsize=20)\n",
+    "plt.title(\"Household Demographics for Flint, Michigan\", fontsize=20)\n",
     "plt.xlabel(\"(40,362 Reported Households)\", fontsize=10)\n",
     "plt.ylabel(\"Types of Households\", fontsize=16)\n",
     "plt.axis(\"equal\")\n",
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "0edebc1a",
+   "id": "08572658",
    "metadata": {},
    "source": [
     "Households and families are basic units of analysis in demography. ... Under the U.S. Census Bureau definition, family households consist of two or more individuals who are related by birth, marriage, or adoption, although they also may include other unrelated people."
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "1fea065e",
+   "id": "d4430063",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
     "        autopct=\"%1.1f%%\", shadow=True, startangle=140)\n",
     "\n",
     "\n",
-    "plt.title(\"Age Demographices for Flint, Michigan\", fontsize=20)\n",
+    "plt.title(\"Age Demographics for Flint, Michigan\", fontsize=20)\n",
     "plt.xlabel(\"Population estimates, July 1, 2019 (95,538)\", fontsize=10)\n",
     "plt.ylabel(\"Age Demographics\", fontsize=16)\n",
     "plt.axis(\"equal\")\n",
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "64daebd1",
+   "id": "bbfbebf6",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
     "        autopct=\"%1.1f%%\", shadow=True, startangle=140)\n",
     "\n",
     "\n",
-    "plt.title(\"Female/Male Demongraphicsfor Flint, Michigan\", fontsize=20)\n",
+    "plt.title(\"Female/Male Demongraphics for Flint, Michigan\", fontsize=20)\n",
     "plt.xlabel(\"Population estimates, July 1, 2019 (95,538)\", fontsize=10)\n",
     "plt.ylabel(\"Sex Demographics\", fontsize=16)\n",
     "plt.axis(\"equal\")\n",
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "fc40d53b",
+   "id": "925c2f44",
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a4663a00",
+   "id": "39820cf7",
    "metadata": {},
    "source": [
     "The poverty thresholds are the original version of the federal poverty measure.  They are updated each year by the Census Bureau.  The thresholds are used mainly for statistical purposes — for instance, preparing estimates of the number of Americans in poverty each year.  (In other words, all official poverty population figures are calculated using the poverty thresholds, not the guidelines.) Poverty thresholds since 1973 (and for selected earlier years) and weighted average poverty thresholds since 1959 are available on the Census Bureau’s Web site.  "
