--- a/Education and Health.ipynb
+++ b/Education and Health.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "56ab468c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "57f5d577",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "[83 rows x 8 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "6b7166d0",
    "metadata": {
     "scrolled": false
@@ -395,7 +395,7 @@
        "[83 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "7fa8b900",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "Bachelor's degree or higher, percent of persons...                 0.12  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "a82c872b",
    "metadata": {},
    "outputs": [
@@ -502,6 +502,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -524,12 +533,12 @@
     "plt.ylabel(\"Percentage\", fontsize=17)\n",
     "plt.show()\n",
     "\n",
-    "\n"
+    "plt.savefig('High School Diploma')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "6af56fa5",
    "metadata": {},
    "outputs": [
@@ -543,6 +552,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -563,12 +581,14 @@
     "plt.title(\"% of People with at least a Bachelor's Degree\", fontsize=20)\n",
     "plt.xlabel(\"Locations\", fontsize=17)\n",
     "plt.ylabel(\"Percentage\", fontsize=17)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "plt.savefig('Bachelors Degree')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "6b68c5a6",
    "metadata": {},
    "outputs": [
@@ -633,7 +653,7 @@
        "Persons  without health insurance, under age 65...                 0.09  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "dc8a4ddb",
    "metadata": {},
    "outputs": [
@@ -662,6 +682,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -682,12 +711,14 @@
     "plt.title(\"% of People with a Disability\", fontsize=20)\n",
     "plt.xlabel(\"Locations\", fontsize=17)\n",
     "plt.ylabel(\"Percentage\", fontsize=17)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "plt.savefig('Disability')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "15c54bba",
    "metadata": {},
    "outputs": [
@@ -701,6 +732,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -721,7 +761,9 @@
     "plt.title(\"% of People without Health Insurance\", fontsize=20)\n",
     "plt.xlabel(\"Locations\", fontsize=17)\n",
     "plt.ylabel(\"Percentage\", fontsize=17)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "plt.savefig('Health Insurance')"
    ]
   },
   {
